force-app/main/default/objects/SmartIntake_Message__mdt/SmartIntake_Message__mdt.object-meta.xml
<CustomObject>
    <label>SmartIntake Message</label>
    <pluralLabel>SmartIntake Messages</pluralLabel>
</CustomObject>