force-app/main/default/objects/SmartIntake_Message__mdt/fields/Message_Key__c.field-meta.xml
<CustomField>
    <fullName>Message_Key__c</fullName>
    <label>Message Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>