force-app/main/default/objects/SmartIntake_Message__mdt/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <label>Message Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>