force-app/main/default/objects/SmartIntake_Message__mdt/fields/Template_Key__c.field-meta.xml
<CustomField>
    <fullName>Template_Key__c</fullName>
    <label>Template Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>